k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: space-exploration-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: space-exploration-ui
  template:
    metadata:
      labels:
        app: space-exploration-ui
    spec:
      containers:
        - name: space-exploration-ui
          image: stevegreghatch/space-exploration-ui:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
