k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: space-exploration-ui
spec:
  selector:
    app: space-exploration-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
