k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: space-exploration-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: history-from-the-frontier.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: space-exploration-ui
                port:
                  number: 3000
